# XMW-no-OS

./: udo journalctl --since _5 minutes ago_ _ grep -E _(wpa_supplicant_EAP_MSCHAPV2_error 691)_ _ tail -10  udo nmcli connection modify XM-SEC-5G 802-1x.identity davin.himel@xmicrowave.com
drivers/frequency/adf4377/: adf4377.c
drivers/frequency/adf4382/: adf4382.h
drivers/platform/linux/: linux_spi.h
projects/ADF4377_Test/: Makefile  README.md  adf4377_test  adf4377_test_lsb  src.mk
projects/ADF4377_Test/so/: ADF4377.i  ADF4377_wrap.c  LIBADNOOS_LINKING.md  Makefile  adf4377.py  adf4377_SWIG_Testing.py  adf4377_test_api.c  adf4377_test_swig.py  test_adf4377.py
projects/ADF4377_Test/src/common/: common_data.c  common_data.h
projects/ADF4382_Test/: Makefile  README.md  src.mk
projects/ADF4382_Test/src/common/: common_data.c  common_data.h
projects/adf4368/: Makefile  README_VENDOR_ID_LINUX.md  test_vendor_id.sh
projects/adf4368/src/common/: common_data.c  common_data.h
projects/adf4377_sdz/: Makefile  Makefile.minimal  README_VENDOR_ID.md  README_VENDOR_ID_LINUX.md  minimal_vendor_id_test.c  simple_vendor_id_test  simple_vendor_id_test.c  test_vendor_id.sh  vendor_id_diagnostic.c
projects/adf4377_sdz/src/common/: common_data.c  common_data.h
projects/adf4377_sdz/src/examples/: vendor_id_example.c
projects/adf4382/: Makefile  README_LINUX.md  original_example_test.c  simple_chip_id_test  simple_chip_id_test.c  skip_scratchpad_test  skip_scratchpad_test.c  spi_diagnostic  spi_diagnostic.c  spi_loopback_test  spi_loopback_test.c  spi_mode_test  spi_mode_test.c  spi_test  test_connections  test_connections.c  three_wire_test  three_wire_test.c  update_adf4382  update_adf4382.c  update_adf4382_static  update_adf4382_static.c  vendor_id_test  vendor_id_test.c
projects/adf4382/gui/: main.py
projects/adf4382/gui/configs/: adf4382.json
projects/adf4382/src/common/: common_data.c
projects/libadnoos/: QUICKSTART.md  README.md
projects/libadnoos/core/: CMakeLists.txt
projects/libadnoos/core/include/: adnoos.h
projects/libadnoos/examples/: CFFI_README.md  Makefile  adf4377_cffi.py  adf4377_test.c  python_control.py  requirements.txt  test.py  test_spi_cs.py
projects/libadnoos/plugins/ad3530r/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad3552r/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad405x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad4080/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad4170/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad463x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad469x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad4858/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5421/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5460/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5628/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5686/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5754r/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5758/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5761r/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5766/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5770r/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad5791/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7091r5/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7091r8/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad713x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad719x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7293/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad738x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7606/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7689/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7779/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad7799/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad796x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad8460/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad9081/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad9083/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad9144/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad917x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad9523/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad9528/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ad9680/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adaq8092/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf4030/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf4368/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf4371/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf4382/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf5355/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf5611/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adf5902/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adm1177/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/admfm2000/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/admv1013/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/admv1014/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adrf6780/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adt7420/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/adt75/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/hmc7044/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ltc2358/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ltc2672/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ltc268x/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ltc2983/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/ltc6953/: CMakeLists.txt  plugin.c
projects/libadnoos/plugins/max11205/: CMakeLists.txt  plugin.c
projects/libadnoos/tools/: make_driver_so.sh
projects/libadnoos_adf4377/python/: adf4377.py  adf4377_wrap.c
(+36 files in other folders)
